# tapshalkar.com

./: .gitignore  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: README.md  deploy-backend.yml  deploy-frontend.yml  deploy-job.yml  deploy-resume-parser.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: __init__.py  chat.py  gcs.py  model_armor.py
backend/app/routers/: chat.py  contact.py  currently.py  graph.py
backend/tests/: test_chat.py  test_contact.py  test_currently.py  test_graph.py  test_health.py  test_model_armor.py
docs/superpowers/plans/: 2026-04-09-backend.md  2026-04-09-cicd.md  2026-04-09-frontend.md  2026-04-09-graph-gen-job.md  2026-04-09-infra.md  2026-04-10-phase-1-5a-subdomain-routing.md  2026-04-10-phase-1-5b-graph-enrichment.md  2026-04-10-phase-1-5c-frontend-spa.md  2026-04-11-spotify-enrichment.md  2026-04-13-phase-2a-graph-enrichment.md  2026-04-13-phase-2b-chat-backend.md  2026-04-13-phase-2c-chat-frontend.md  2026-04-13-phase-2d-graph-chat-integration.md  2026-04-17-chat-loading-timeout.md
docs/superpowers/specs/: 2026-04-09-portfolio-design.md  2026-04-10-phase-1-5a-subdomain-routing-design.md  2026-04-10-phase-1-5b-graph-enrichment-design.md  2026-04-10-phase-1-5c-frontend-spa-design.md  2026-04-11-spotify-enrichment-design.md  2026-04-13-phase-2-chat-design.md  2026-04-13-phase-2d-graph-chat-integration.md  2026-04-17-chat-loading-timeout-design.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/lib/: devGraph.ts
infra/: .bootstrap-complete  artifact_registry.tf  cdn.tf  cloud_functions.tf  cloud_run.tf  cloud_run_job.tf  dns.tf  gcs.tf  github.tf  iam.tf  main.tf  model_armor.tf  org_policy.tf  outputs.tf  scheduler.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf  wif.tf
jobs/graph-gen/: .env.example  bio.md  embedder.py  main.py  models.py  pyproject.toml  synthesizer.py  writer.py
jobs/graph-gen/sources/: apple_health.py  bio.py  github.py  resume.py  spotify.py  steam.py  trakt.py
jobs/graph-gen/tests/: test_apple_health.py  test_bio.py  test_github.py  test_spotify.py  test_spotify_enriched.py  test_steam.py  test_steam_enriched.py  test_synthesizer.py  test_synthesizer_agentic.py  test_trakt.py  test_writer.py
jobs/resume-parser/: main.py  requirements.txt
(+21 files in other folders)
