[project]
name = "tapshalkar-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-cloud-storage>=2.18",
    "resend>=2.4",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "email-validator>=2.3.0",
    "anthropic>=0.40",
    "voyageai>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.7",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
