[project]
name = "tapshalkar-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "google-cloud-storage>=3.10.1",
    "resend>=2.29.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.14.0",
    "httpx>=0.28.1",
    "email-validator>=2.3.0",
    "anthropic>=0.97.0",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "anyio>=4.13.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
