[project]
name = "graph-gen"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.28",
    "google-cloud-storage>=2.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.7",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
