[project]
name = "graph-gen"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.95.0",
    "httpx>=0.28.1",
    "google-cloud-storage>=3.10.1",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "anyio>=4.13.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
